--- a/estilo/style.css
+++ b/estilo/style.css
@@ -102,160 +102,6 @@ h3 {
   padding: 10px;
 }
 
-/* CSS Fotos */
-
-ul#album-fotos {
-  list-style: none;
-}
-
-ul#album-fotos li {
-  float: left;
-  width: 300px;
-  height: 300px;
-  margin: 0px;
-  border: 1px solid #ffffff;
-  background-color: #ffffff;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
-}
-
-/* CSS Fotos SeasonOne */
-
-ul#album-fotos li#fotos01 {
-  background: url('../imagens/img\ temp1-1.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos02 {
-  background: url('../imagens/img\ temp1-6.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos03 {
-  background: url('../imagens/img\ temp1-3.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos04 {
-  background: url('../imagens/img\ temp1-4.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos05 {
-  background: url('../imagens/img\ temp1-5.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos06 {
-  background: url('../imagens/img\ temp1-2.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-/* CSS Fotos SeasonTwo */
-
-ul#album-fotos li#fotos07 {
-  background: url('../imagens/img\ temp2-1.jpg') no-repeat;
-  background-position: 20% 0%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos08 {
-  background: url('../imagens/img\ temp2-2.jpg') no-repeat;
-  background-position: 10% 30%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos09 {
-  background: url('../imagens/img\ temp2-3.jpg') no-repeat;    
-  background-position: 40% 40%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos10 {
-  background: url('../imagens/img\ temp2-4.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos11 {
-  background: url('../imagens/img\ temp2-5.jpg') no-repeat;   
-   background-position: 40% 40%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos12 {
-  background: url('../imagens/img\ temp2-6.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-/* CSS Fotos SeasonOne */
-
-ul#album-fotos li#fotos13 {
-  background: url('../imagens/img\ temp3-1.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos14 {
-  background: url('../imagens/img\ temp3-2.jpg') no-repeat;   
-   background-position: 40% 40%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos15 {
-  background: url('../imagens/img\ temp3-3.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos16 {
-  background: url('../imagens/img\ temp3-4.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-  margin-left: 50px;
-}
-
-ul#album-fotos li#fotos17 {
-  background: url('../imagens/img\ temp3-5.jpg') no-repeat;   
-   background-position: 40% 40%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
-ul#album-fotos li#fotos18 {
-  background: url('../imagens/img\ temp3-6.jpg') no-repeat;    
-  background-position: 50% 50%;
-  background-size: 300px 300px;
-  background-color: #ffffff;
-}
-
 /* CSS Home */
 
 .homeH2 {
@@ -299,6 +145,7 @@ ul#album-fotos li#fotos18 {
 
 .curiP {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 12pt;
 }
 
 .curih4 {
@@ -317,6 +164,7 @@ ul#album-fotos li#fotos18 {
   color: rgb(116, 0, 0);
   margin: 20px;
   padding-left: 10px;
+  font-size: 12pt;
 }
 
 .oneh3 {
@@ -344,7 +192,12 @@ ul#album-fotos li#fotos18 {
 }
 
 .oneA {
-  color: #7a001f;
+  color: #ff3535;
+}
+
+a:hover{
+  text-decoration: underline;
+  color: rgb(168, 0, 0);
 }
 
 /* CSS SeasonTwo */
@@ -363,6 +216,7 @@ ul#album-fotos li#fotos18 {
   color: rgb(116, 0, 0);
   margin: 20px;
   padding-left: 10px;
+  font-size: 12pt;
 }
 
 .twoOl {
@@ -384,6 +238,7 @@ ul#album-fotos li#fotos18 {
   color: rgb(116, 0, 0);
   margin: 20px;
   padding-left: 10px;
+  font-size: 12pt;
 }
 
 .treh3 {
@@ -411,4 +266,36 @@ ul#album-fotos li#fotos18 {
 
 .treA {
   color: #7a001f;
+}
+
+/* CSS NotOne */
+
+.notP{
+  font-family: Arial, Helvetica, sans-serif;
+  text-indent: 1em;
+  color: rgb(116, 0, 0);
+  margin: 20px;
+  padding-left: 10px;
+  font-size: 12pt;
+}
+
+.noth3 {
+  color: #810020;
+  margin: 20px;
+}
+
+.noth4 {
+  text-align: left;
+  margin-left: 50px;
+  font-size: 14pt;
+  color: #bd4949;
+  margin-top: 20px;
+}
+
+.noth5 {
+  text-align: center;
+  font-weight: bolder;
+  font-style: oblique;
+  font-size: 14px;
+  margin: 20px;
 }
