--- a/estilo/galeria.css
+++ b/estilo/galeria.css
@@ -7,7 +7,8 @@
     width: 300px;
     height: 300px;
     overflow: hidden;
-    margin: 25px;
+    margin: 1px;
+    margin-left: -10px;
 }
 
 .small_img{
