--- a/estilo/galeria.css
+++ b/estilo/galeria.css
@@ -7,8 +7,7 @@
     width: 300px;
     height: 300px;
     overflow: hidden;
-    margin: 1px;
-    margin-left: -10px;
+    margin: 25px;
 }
 
 .small_img{
@@ -16,14 +15,65 @@
     cursor: pointer;
     transition: all linear 0.4s;
 }
-
 .small_img:hover{
-    filter: grayscale(70%);
-    transform: scale(1.01);
+    filter: grayscale(100%);
+    transform: scale(1.1);
 }
 
 .row{
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
+#modal_img{
+    width: 65vw;
+    transform: scale(0);
+    transition: all linear .3s;
+}
+
+.modal_active #modal_img{
+    transform: scale(1);
+}
+.modal{
+
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .7);
+    position: fixed;
+    visibility: hidden;
+    z-index: 1;
+    opacity: 0;
+    transition: visibility 0.8s linear, opacity 0.5s linear;
+}
+
+.modal_content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+#bt_close{
+    color:#fff;
+    background-color: #000;
+    position: absolute;
+    top:10px;
+    right: 10px;
+    padding: 5px 10px;
+    font-size: 25px;
+    border:solid 1px #fff;
+    transition: all ease-out .4s;
+    cursor: pointer;
+}
+#bt_close:hover{
+    background-color: #f00;
+}
+
+.modal_active{
+    visibility: visible;
+    opacity: 1;
+
+}
+
 
