--- a/estilo/galeria.css
+++ b/estilo/galeria.css
@@ -7,7 +7,8 @@
     width: 300px;
     height: 300px;
     overflow: hidden;
-    margin: 25px;
+    margin: 1px;
+    margin-left: -10px;
 }
 
 .small_img{
@@ -15,9 +16,10 @@
     cursor: pointer;
     transition: all linear 0.4s;
 }
+
 .small_img:hover{
     filter: grayscale(100%);
-    transform: scale(1.1);
+    transform: scale(1.01);
 }
 
 .row{
